--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "extra": {
         "branch-alias": {
-            "master": "1.3.0"
+            "main": "1.3.0"
         }
     },
     "scripts": {
