--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "devhjz/cfg-turnstile-packagist",
+    "version": "1.3.0",
     "description": "Client library for reCAPTCHA, a free service that protects websites from spam and abuse.",
     "type": "library",
     "keywords": ["Turnstile", "captcha", "spam", "abuse"],
